--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -1570,7 +1570,27 @@
       }
     },
     "perps": {
+      "common": {
+        "not_available": "N/A",
+        "current_price": "Current Price",
+        "title": "Perps",
+        "error_submitting_order": "Error submitting order",
+        "submitting": "Submitting...",
+        "more": "More",
+        "error": "Error",
+        "cancel": "Cancel"
+      },
+      "actions": {
+        "fund_wallet": "Fund Wallet",
+        "new_position": "New Position",
+        "close_position": "Close Position",
+        "open_position": "Open Position"
+      },
+      "account": {
+        "available_balance": "AVAILABLE BALANCE"
+      },
       "markets": {
+        "title": "Markets",
         "up_to": "UP TO",
         "already_open": "Already Open"
       },
@@ -1599,6 +1619,19 @@
         "long": "Long",
         "short": "Short"
       },
+      "positions": {
+        "entry": "ENTRY",
+        "mark_price": "MARK PRICE",
+        "liq_price": "LIQ. PRICE",
+        "open_positions": "Open Positions",
+        "no_open_positions": "No Open Positions",
+        "position_value": "Position Value",
+        "mark_price_full": "Mark Price",
+        "entry_price": "Entry Price",
+        "funding": "Funding",
+        "liquidation_price": "Liquidation Price",
+        "total": "Total"
+      },
       "new_position": {
         "hold_to_long": "Hold to Long",
         "hold_to_short": "Hold to Short",
@@ -1613,6 +1646,51 @@
         "available": "Available",
         "minimum_amount_is": "Minimum amount is",
         "maximum_amount_is": "Maximum amount is"
+      },
+      "history": {
+        "title": "History",
+        "no_trades": "No trades",
+        "trade_execution": {
+          "take_profit_executed": "Take Profit Executed",
+          "stop_loss_executed": "Stop Loss Executed",
+          "long_opened": "Long Opened",
+          "short_opened": "Short Opened",
+          "long_closed": "Long Closed",
+          "short_closed": "Short Closed",
+          "long_liquidated": "Long Liquidated",
+          "short_liquidated": "Short Liquidated"
+        }
+      },
+      "trigger_orders": {
+        "title": "Trigger Orders",
+        "take_profit": "Take Profit",
+        "stop_loss": "Stop Loss",
+        "sell": "Sell",
+        "cancel_failed": "Failed to cancel order",
+        "add_stop_loss": "Add Stop Loss",
+        "add_take_profit": "Add Take Profit",
+        "price": "Price",
+        "projected_profit": "Projected Profit",
+        "projected_loss": "Projected Loss",
+        "add": "Add",
+        "adding": "Adding...",
+        "above": "above",
+        "below": "below",
+        "must_be": "Must be",
+        "liq_price": "liq. price",
+        "failed_to_create": "Failed to create trigger order"
+      },
+      "search": {
+        "search_markets": "Search markets",
+        "markets_count": "%{count} MARKETS",
+        "choose_a_market": "CHOOSE A MARKET"
+      },
+      "close_position": {
+        "estimated_loss": "Estimated Loss",
+        "estimated_profit": "Estimated Profit",
+        "minimum_amount_is": "Minimum amount is",
+        "closing": "Closing...",
+        "hold_to_close": "Hold to Close"
       },
       "leverage": "Leverage",
       "up_to": "Up to"
