introducing perps feature card

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3587,6 +3587,7 @@
     "done": "Done",
     "copy": "Copy",
     "paste": "Paste",
+    "new": "New",
     "market_data": {
       "vol": "VOL",
       "price": "PRICE",
