TL updates with transactions fixes (#6846)
* WIP

* Remove redundant code

* Add support for tlv2 envs

* TEMP: override for tenderly on base

* Allow creating with no token logo

* Update package.json to use private tl-v2 npm package and alias existing usage of tl in code

* Add resolution for tanstack query-core

* Revert "TEMP: override for tenderly on base"

This reverts commit 732c7452b33b61118dd0bf0ad8b139725cde470d.

* Update yarn.lock

* Add fallback KOTH coin icons

* Fix fallback icons

* Re-add price to token launcher footer

* Temp: re-add dev section env vars analyzer

* Adjust KOTH explain sheet copy

* Add token search url to analyze env vars

* Add fallback if king token has no coin icon

* Adjust leaderboard item badge style

* Update Legend List, minor list optimizations

* Clean up pending transaction and nonce stores

Also migrates both to `createRainbowStore`

* Make `clearMinedTransactions` idempotent

* Patch abort leaks in the addys client singleton

This was causing cross-contaminated aborts in unrelated addys requests

* Reduce type assertions, remove false async tag

* Stabilize transaction watchers

In certain cases when swapping or creating transactions, a runaway retry loop would occur driven by a combination of transaction fetch failures and the useEffect logic in `useTransactionWatcher`. Seems to have been a mix of instability in `processTransactions` and the abort logic.

This simplifies the structure of the retry tick and generates a key from the pending or mined transactions, which is used to trigger the useEffect.

It uses refs for the watch function and the transactions data to further limit instability and avoid stale closures.

* Normalize transaction statuses, bypass React Query for transaction fetches

The addys transaction endpoint seems to be inconsistent in where it places the transaction status, so this adds normalization logic to account for it.

This also bypasses the React Query client when fetching transactions, as it

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -3322,7 +3322,7 @@
       },
       "prebuy": {
         "balance_after_gas_fee": "Available Balance: %{balance}",
-        "title": "Pre-buy more tokens"
+        "title": "Pre-buy tokens"
       },
       "review": {
         "token_allocation": "Token allocation",
@@ -3483,7 +3483,7 @@
         "steps": {
           "step_1": {
             "title": "The race is live",
-            "subtitle_parts": ["The token with the most", " buy volume ", "right now is the current king."]
+            "subtitle_parts": ["The current king is the token created in the last 30 days with the most", " buy volume ", "today."]
           },
           "step_2": {
             "title": "One crown a day",
