--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -1584,7 +1584,7 @@
       },
       "feature_card": {
         "title": "Perps",
-        "subtitle": "High risk, high reward trading"
+        "subtitle": "High-risk, high-reward trading"
       },
       "actions": {
         "fund_wallet": "Fund Wallet",
@@ -1605,21 +1605,26 @@
         "no_balance": "No Balance",
         "receive": "Receive",
         "slider_label": "Depositing",
+        "zero_amount_error": "Enter an amount to deposit",
         "confirm_button_text": "Hold to Deposit",
         "confirm_button_loading_text": "Depositing...",
         "confirm_button_zero_text": "Enter Amount",
         "confirm_button_over_balance_text": "Insufficient Funds",
         "confirm_button_error_text": "Quote Error",
-        "quote_error": "􀇿 No quote available"
+        "quote_error": "􀇿 No quote available",
+        "insufficient_balance": "􀫲 Insufficient Funds"
       },
       "withdraw": {
         "title": "Withdraw",
         "slider_label": "Withdrawing",
         "confirm_button_text": "Hold to Withdraw",
         "confirm_button_loading_text": "Withdrawing...",
-        "available_balance": "%{balance} available",
+        "available_balance_suffix": " Available",
         "confirm_button_zero_text": "Enter Amount",
-        "confirm_button_over_balance_text": "Insufficient Funds"
+        "confirm_button_over_balance_text": "Insufficient Funds",
+        "info_card_title_prefix": "Withdrawing to ",
+        "info_card_title_suffix": "Arbitrum",
+        "info_card_subtitle": "Additional networks coming soon. Withdrawals currently include a $1.00 Hyperliquid fee."
       },
       "position_side": {
         "long": "Long",
