Visual indicators for token balance liquidity capping (#6874)
* capped value disclaimer in expanded state

* add ~ to wallet liq capped balances, fix live price immediate fetching

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -715,6 +715,10 @@
         "uniswap_liquidity": "Uniswap liquidity",
         "value": "Value",
         "volume_24_hours": "24h volume",
+        "liquidity_cap_disclaimer": {
+          "value_lower_than": "Value is lower than",
+          "due_to_low_liquidity": "due to low liquidity"
+        },
         "menu": {
           "view_on": "View on %{blockExplorerName}",
           "share": "Share",
